Fix - hero section mobile resposive

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -230,9 +230,67 @@ span {
   gap: 30px;
 }
 
-@media (max-width: 768px) {
+/* @media (max-width: 380px) {
   .main {
+    height: auto;
+  }
+} */
+
+@media (max-width: 1000px) {
+  .main {
+    background-image: url(../images/hero.jpg);
+    background-size: cover;
+    background-position: center;
+    width: auto;
+    height: 100vh;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    margin-top: 100px;
+    border: 2px solid black;
+    padding: 10px;
+  }
+
+  .left {
+    width: 100%;
+    text-align: center;
+    padding: 20px;
+  }
+
+  .left h1 {
+    font-size: 2.8rem;
+    min-height: auto;
+    margin-left: 0;
+  }
+
+  .left p {
+    margin-left: 0;
+    font-size: 1rem;
+    text-align: center;
+  }
+
+  .button-section {
+    margin-top: 20px;
+    display: flex;
+    gap: 20px;
+    width: 300px;
+    margin-right: 100px;
+  }
+
+  .check-now,
+  .contact-us {
+    width: 100%;
+    height: 50px;
+    font-size: 1rem;
+  }
+
+  .right {
+    width: 100%;
+    padding: 0;
+  }
+
+  .right img {
+    max-width: 70%;
+    height: 40vh;
+    /* margin-bottom: 50px; */
   }
 }
